--- a/src/sass/_style.sass
+++ b/src/sass/_style.sass
@@ -6,7 +6,7 @@
 @import "blocks/promo"
 @import "blocks/header"
 @import "blocks/buttons"
-
+@import "blocks/advantages"
 a
    text-decoration: none
 
