--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -89,9 +89,12 @@
       font-size: 22px
 
    .consultation
-      padding-top: 60px
+      padding: 40px 0 80px 0
       .title
          &_left
             font-size: 22px
+      .feed-form
+         width: 275px
       &__descr
          font-size: 16px
+
